RESOLVED FIXED 243171
[iOS 16] 'Insert text from camera' action should not appear in the edit menu when a range is selected
https://bugs.webkit.org/show_bug.cgi?id=243171
Summary [iOS 16] 'Insert text from camera' action should not appear in the edit menu ...
Wenson Hsieh
Reported 2022-07-25 11:57:06 PDT
.
Attachments
Wenson Hsieh
Comment 1 2022-07-25 12:04:18 PDT
EWS
Comment 2 2022-07-25 16:41:14 PDT
Committed 252805@main (c106e6ec944a): <https://commits.webkit.org/252805@main> Reviewed commits have been landed. Closing PR #2708 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-25 16:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.